--- a/aircv/HTML/index.html
+++ b/aircv/HTML/index.html
@@ -164,7 +164,7 @@
                                             <i class="service-icon icon-chemistry"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3>HTML5/CSS3</h3>
+                                            <h3>Cobranza</h3>
                                             <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
                                         </div>
                                         <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="content-wrapper-link"></a>    
@@ -176,7 +176,7 @@
                                             <i class="service-icon color-white icon-screen-tablet"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3 class="color-white">Photoshop</h3>
+                                            <h3 class="color-white">Excel</h3>
                                             <p class="color-white margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
                                         </div>
                                         <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="content-wrapper-link"></a>    
@@ -188,7 +188,7 @@
                                             <i class="service-icon icon-badge"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3>Front-end</h3>
+                                            <h3>Administración</h3>
                                             <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
                                         </div>
                                         <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="content-wrapper-link"></a>    
