Agregando resto de proyectos

--- a/aircv/HTML/index.html
+++ b/aircv/HTML/index.html
@@ -229,7 +229,7 @@
                                             <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                             <div class="margin-b-30">
                                                 <h3 class="margin-b-5">Venus e-commerce</h3>
-                                                <span>Consumo de una API</span>
+                                                <span>E-commerce</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
@@ -247,10 +247,10 @@
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p class="margin-b-5"><strong>Project Leader:</strong> John Doe</p>
-                                                        <p class="margin-b-5"><strong>Designer:</strong> Alisa Keys</p>
-                                                        <p class="margin-b-5"><strong>Developer:</strong> Mark Doe</p>
-                                                        <p class="margin-b-5"><strong>Customer:</strong> Keenthemes</p>
+                                                        <p class="margin-b-5"><strong>Ver proyecto:</strong></p>
+                                                        <a href="https://cruzmayra.github.io/venus-e-commerce/" target="_blank"><i class="icon-eye"></i></a>
+                                                        <p class="margin-b-5"><strong>Ver repositorio:</strong></p>
+                                                        <a href="https://github.com/CruzMayra/venus-e-commerce" target="_blank"><i class="icon-social-github"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -269,27 +269,26 @@
                                         <div class="work-popup-content">
                                             <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                             <div class="margin-b-30">
-                                                <h3 class="margin-b-5">Art Of Coding</h3>
-                                                <span>Clean &amp; Minimalistic Design</span>
+                                                <h3 class="margin-b-5">Pokédex</h3>
+                                                <span>Consumo de una API</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                                                        <p>Pokédex clásico que muestra los pokémones de la primer temporada. Además incluye los detalles esenciales de cada uno por medio de un modal.</p>
                                                         <ul class="list-inline work-popup-tag">
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Design,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Coding,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Portfolio</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">API,</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">GraphQL,</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">DOM</a></li>
                                                         </ul>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p class="margin-b-5"><strong>Project Leader:</strong> John Doe</p>
-                                                        <p class="margin-b-5"><strong>Designer:</strong> Alisa Keys</p>
-                                                        <p class="margin-b-5"><strong>Developer:</strong> Mark Doe</p>
-                                                        <p class="margin-b-5"><strong>Customer:</strong> Keenthemes</p>
+                                                        <p class="margin-b-5"><strong>Ver proyecto:</strong></p>
+                                                        <a href="https://cruzmayra.github.io/pokedex/" target="_blank"><i class="icon-eye"></i></a>
+                                                        <p class="margin-b-5"><strong>Ver repositorio:</strong></p>
+                                                        <a href="https://github.com/CruzMayra/pokedex" target="_blank"><i class="icon-social-github"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -308,27 +307,27 @@
                                         <div class="work-popup-content">
                                             <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                             <div class="margin-b-30">
-                                                <h3 class="margin-b-5">Art Of Coding</h3>
-                                                <span>Clean &amp; Minimalistic Design</span>
+                                                <h3 class="margin-b-5">Ticket-hack</h3>
+                                                <span>Plataforma para el intercambio de boletos.</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                                                        <p>Plataforma que busca ofrecer un espacio para el intercambio de boletos, principalmente para conciertos, desde una comunidad segura y confiable.</p>
+                                                        <p>Ticket-hack es un proyecto colaborativo realizado durante la hackatón interna de Laboratoria.</p>
                                                         <ul class="list-inline work-popup-tag">
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Design,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Coding,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Portfolio</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">API,</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Firebase,</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Database</a></li>
                                                         </ul>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p class="margin-b-5"><strong>Project Leader:</strong> John Doe</p>
-                                                        <p class="margin-b-5"><strong>Designer:</strong> Alisa Keys</p>
-                                                        <p class="margin-b-5"><strong>Developer:</strong> Mark Doe</p>
-                                                        <p class="margin-b-5"><strong>Customer:</strong> Keenthemes</p>
+																												<p class="margin-b-5"><strong>Ver proyecto:</strong></p>
+                                                        <a href="https://cruzmayra.github.io/ticket-hack/" target="_blank"><i class="icon-eye"></i></a>
+                                                        <p class="margin-b-5"><strong>Ver repositorio:</strong></p>
+                                                        <a href="https://github.com/CruzMayra/ticket-hack" target="_blank"><i class="icon-social-github"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -347,27 +346,27 @@
                                         <div class="work-popup-content">
                                             <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                             <div class="margin-b-30">
-                                                <h3 class="margin-b-5">Art Of Coding</h3>
-                                                <span>Clean &amp; Minimalistic Design</span>
+                                                <h3 class="margin-b-5">Scribere</h3>
+                                                <span>Red social</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                                                        <p>Plataforma pensada para los entusiastas de la escritura, dónde pueden publicar historias cortas así como leer o, si lo prefieren guardar como favoritas las historias de otros.</p>
+                                                        <p>Proyecto colaborativo que utiliza la autentificación por medio de la API de Google: Firebase.</p>
                                                         <ul class="list-inline work-popup-tag">
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Design,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Coding,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Portfolio</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Social network,</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Firebase,</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Bootstrap</a></li>
                                                         </ul>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p class="margin-b-5"><strong>Project Leader:</strong> John Doe</p>
-                                                        <p class="margin-b-5"><strong>Designer:</strong> Alisa Keys</p>
-                                                        <p class="margin-b-5"><strong>Developer:</strong> Mark Doe</p>
-                                                        <p class="margin-b-5"><strong>Customer:</strong> Keenthemes</p>
+                                                        <p class="margin-b-5"><strong>Ver proyecto:</strong></p>
+                                                        <a href="https://cruzmayra.github.io/scribere-social-network/" target="_blank"><i class="icon-eye"></i></a>
+                                                        <p class="margin-b-5"><strong>Ver repositorio:</strong></p>
+                                                        <a href="https://github.com/CruzMayra/scribere-social-network" target="_blank"><i class="icon-social-github"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -386,27 +385,26 @@
                                         <div class="work-popup-content">
                                             <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                             <div class="margin-b-30">
-                                                <h3 class="margin-b-5">Art Of Coding</h3>
-                                                <span>Clean &amp; Minimalistic Design</span>
+                                                <h3 class="margin-b-5">LabCar</h3>
+                                                <span>Práctica con frameworks</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                                                        <p>Replica de la página de Lab-Car con la utilización de un framework, en este caso se encuentra desarollado en Bootstrap.</p>
                                                         <ul class="list-inline work-popup-tag">
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Design,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Coding,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="http://keenthemes.com/">Portfolio</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Responsive,</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Bootstrap,</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Google API</a></li>
                                                         </ul>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p class="margin-b-5"><strong>Project Leader:</strong> John Doe</p>
-                                                        <p class="margin-b-5"><strong>Designer:</strong> Alisa Keys</p>
-                                                        <p class="margin-b-5"><strong>Developer:</strong> Mark Doe</p>
-                                                        <p class="margin-b-5"><strong>Customer:</strong> Keenthemes</p>
+                                                        <p class="margin-b-5"><strong>Ver proyecto:</strong></p>
+                                                        <a href="https://cruzmayra.github.io/lab-car-boilerplate/" target="_blank"><i class="icon-eye"></i></a>
+                                                        <p class="margin-b-5"><strong>Ver repositorio:</strong></p>
+                                                        <a href="https://github.com/CruzMayra/lab-car-boilerplate" target="_blank"><i class="icon-social-github"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
