--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Mayra Cruz</title>
+        <link rel="shortcut icon" type="image/x-icon" href="img/logo-page.ico">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -70,7 +71,7 @@
         <!--========== END HEADER ==========-->
 
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/crew-56835-unsplash.jpg">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/zany-jadraque-571205-unsplash.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
@@ -110,31 +111,31 @@
                         <div class="progress-box">
                             <h5>JS<span class="color-heading pull-right">Intermedio</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="87"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="50"></div>
                             </div>
                         </div>
                         <div class="progress-box">
                             <h5>jQuery <span class="color-heading pull-right">Intermedio</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="77"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="50"></div>
                             </div>
                         </div>
                         <div class="progress-box">
                             <h5>HTML5 <span class="color-heading pull-right">Intermedio</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="96"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="50"></div>
                             </div>
                         </div>
                         <div class="progress-box">
                             <h5>CSS3 <span class="color-heading pull-right">Intermedio</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="52"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="50"></div>
                             </div>
                         </div>
                         <div class="progress-box">
                             <h5>Bootstrap <span class="color-heading pull-right">Básico</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="52"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="30"></div>
                             </div>
                         </div>
                         <!-- End Progress Box -->
@@ -161,37 +162,35 @@
                                 <div class="col-md-4 md-margin-b-4">
                                     <div class="service" data-height="height">
                                         <div class="service-element">
-                                            <i class="service-icon icon-chemistry"></i>
+                                            <i class="service-icon icon-folder-alt"></i>
                                         </div>
                                         <div class="service-info">
                                             <h3>Cobranza</h3>
-                                            <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                                        </div>
-                                        <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="content-wrapper-link"></a>    
+                                            <p class="margin-b-5">Conocimientos básicos en cobranza extrajudicial y fiscal.</p>
+                                        </div>    
                                     </div>
                                 </div>
                                 <div class="col-md-4 md-margin-b-4">
                                     <div class="service bg-color-base wow zoomIn" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
                                         <div class="service-element">
-                                            <i class="service-icon color-white icon-screen-tablet"></i>
+                                            <i class="service-icon color-white icon-user-female"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3 class="color-white">Excel</h3>
-                                            <p class="color-white margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                                            <h3 class="color-white">Descarga mi CV</h3>
+                                            <p class="color-white margin-b-5">Da click aquí</p>
                                         </div>
-                                        <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="content-wrapper-link"></a>    
+                                        <a href="vendor/mayra-cruz-cv.pdf" target="_blank" class="content-wrapper-link"></a>    
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="service" data-height="height">
                                         <div class="service-element">
-                                            <i class="service-icon icon-badge"></i>
+                                            <i class="service-icon icon-paper-clip"></i>
                                         </div>
                                         <div class="service-info">
                                             <h3>Administración</h3>
-                                            <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                                        </div>
-                                        <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="content-wrapper-link"></a>    
+                                            <p class="margin-b-5">Más de cuatro años de experiencia en actividades administrativas.</p>
+                                        </div>    
                                     </div>
                                 </div>
                             </div>
@@ -246,11 +245,11 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
-                                                    <div class="margin-t-10 sm-margin-t-0">
+                                                    <div class="margin-t-10 sm-margin-t-0 text-center">
                                                         <p class="margin-b-5"><strong>Ver proyecto:</strong></p>
-                                                        <a href="https://cruzmayra.github.io/venus-e-commerce/" target="_blank"><i class="icon-eye"></i></a>
+                                                        <a href="https://cruzmayra.github.io/venus-e-commerce/" target="_blank" class="h3"><i class="icon-eye"></i></a>
                                                         <p class="margin-b-5"><strong>Ver repositorio:</strong></p>
-                                                        <a href="https://github.com/CruzMayra/venus-e-commerce" target="_blank"><i class="icon-social-github"></i></a>
+                                                        <a href="https://github.com/CruzMayra/venus-e-commerce" target="_blank" class="h3"><i class="icon-social-github"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -284,11 +283,11 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
-                                                    <div class="margin-t-10 sm-margin-t-0">
+                                                    <div class="margin-t-10 sm-margin-t-0 text-center">
                                                         <p class="margin-b-5"><strong>Ver proyecto:</strong></p>
-                                                        <a href="https://cruzmayra.github.io/pokedex/" target="_blank"><i class="icon-eye"></i></a>
+                                                        <a href="https://cruzmayra.github.io/pokedex/" target="_blank" class="h3"><i class="icon-eye"></i></a>
                                                         <p class="margin-b-5"><strong>Ver repositorio:</strong></p>
-                                                        <a href="https://github.com/CruzMayra/pokedex" target="_blank"><i class="icon-social-github"></i></a>
+                                                        <a href="https://github.com/CruzMayra/pokedex" target="_blank" class="h3"><i class="icon-social-github"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -323,11 +322,11 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
-                                                    <div class="margin-t-10 sm-margin-t-0">
-																												<p class="margin-b-5"><strong>Ver proyecto:</strong></p>
-                                                        <a href="https://cruzmayra.github.io/ticket-hack/" target="_blank"><i class="icon-eye"></i></a>
+                                                    <div class="margin-t-10 sm-margin-t-0 text-center">
+														<p class="margin-b-5"><strong>Ver proyecto:</strong></p>
+                                                        <a href="https://cruzmayra.github.io/ticket-hack/" target="_blank" class="h3"><i class="icon-eye"></i></a>
                                                         <p class="margin-b-5"><strong>Ver repositorio:</strong></p>
-                                                        <a href="https://github.com/CruzMayra/ticket-hack" target="_blank"><i class="icon-social-github"></i></a>
+                                                        <a href="https://github.com/CruzMayra/ticket-hack" target="_blank" class="h3"><i class="icon-social-github"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -362,11 +361,11 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
-                                                    <div class="margin-t-10 sm-margin-t-0">
+                                                    <div class="margin-t-10 sm-margin-t-0 text-center">
                                                         <p class="margin-b-5"><strong>Ver proyecto:</strong></p>
-                                                        <a href="https://cruzmayra.github.io/scribere-social-network/" target="_blank"><i class="icon-eye"></i></a>
+                                                        <a href="https://cruzmayra.github.io/scribere-social-network/" target="_blank" class="h3"><i class="icon-eye"></i></a>
                                                         <p class="margin-b-5"><strong>Ver repositorio:</strong></p>
-                                                        <a href="https://github.com/CruzMayra/scribere-social-network" target="_blank"><i class="icon-social-github"></i></a>
+                                                        <a href="https://github.com/CruzMayra/scribere-social-network" target="_blank" class="h3"><i class="icon-social-github"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -400,11 +399,11 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
-                                                    <div class="margin-t-10 sm-margin-t-0">
+                                                    <div class="margin-t-10 sm-margin-t-0 text-center">
                                                         <p class="margin-b-5"><strong>Ver proyecto:</strong></p>
-                                                        <a href="https://cruzmayra.github.io/lab-car-boilerplate/" target="_blank"><i class="icon-eye"></i></a>
+                                                        <a href="https://cruzmayra.github.io/lab-car-boilerplate/" target="_blank" class="h3"><i class="icon-eye"></i></a>
                                                         <p class="margin-b-5"><strong>Ver repositorio:</strong></p>
-                                                        <a href="https://github.com/CruzMayra/lab-car-boilerplate" target="_blank"><i class="icon-social-github"></i></a>
+                                                        <a href="https://github.com/CruzMayra/lab-car-boilerplate" target="_blank" class="h3"><i class="icon-social-github"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -437,19 +436,19 @@
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Facebook</h5>
-                                    <a href="https://www.facebook.com/mayleo.cruz">FB</a>
+                                    <a href="https://www.facebook.com/mayleo.cruz" class="h3" target="_blank"><i class="icon-social-facebook"></i></a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Github</h5>
-                                    <a href="https://github.com/CruzMayra">GH</a>
+                                    <a href="https://github.com/CruzMayra" class="h3" target="_blank"><i class="icon-social-github"></i></a>
+                                </div>
+                                <div class="col-md-3 col-xs-6">
+                                    <h5>Linkedin</h5>
+                                    <a href="https://www.linkedin.com/in/mayra-cruz-250796159" class="h3" target="_blank"><i class="icon-social-linkedin"></i></a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Email</h5>
                                     <a href="mailto:#">velazquez.leonora@gmail.com</a>
-                                </div>
-                                <div class="col-md-3 col-xs-6">
-                                    <h5>Linkedin</h5>
-                                    <a href="https://www.linkedin.com/in/mayra-cruz-250796159">in</a>
                                 </div>
                             </div>
                         </div>
@@ -462,19 +461,16 @@
         <!--========== END PAGE LAYOUT ==========-->
 
         <!--========== FOOTER ==========-->
-        <footer class="footer">
+        <!-- <footer class="footer">
             <div class="content container">
                 <div class="row">
                     <div class="col-xs-6">
                         <img class="footer-logo" src="img/mc-logo.png" alt="Aircv Logo">
                     </div>
-                    <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700" href="http://keenthemes.com/preview/aircv/">Aircv</a> Theme Powered by: <a class="fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
-                    </div>
-                </div>
+                </div> -->
                 <!--// end row -->
-            </div>
-        </footer>
+            <!-- </div>
+        </footer> -->
         <!--========== END FOOTER ==========-->
 
         <!-- Back To Top -->
