--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Mayra Cruz</title>
-        <link rel="shortcut icon" type="image/x-icon" href="img/logo-page.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="public/img/logo-page.ico">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -12,14 +12,14 @@
 
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
-        <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
-        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="public/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
+        <link href="public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 
         <!-- PAGE LEVEL PLUGIN STYLES -->
-        <link href="css/animate.css" rel="stylesheet">
+        <link href="public/css/animate.css" rel="stylesheet">
 
         <!-- THEME STYLES -->
-        <link href="css/layout.min.css" rel="stylesheet" type="text/css"/>
+        <link href="public/css/layout.min.css" rel="stylesheet" type="text/css"/>
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="favicon.ico"/>
@@ -44,8 +44,8 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="#body">
-                                <img class="logo-img logo-img-main" src="img/mc-logo.png" alt="Asentus Logo">
-                                <img class="logo-img logo-img-active" src="img/mc-logo.png" alt="Asentus Logo">
+                                <img class="logo-img logo-img-main" src="public/img/mc-logo.png" alt="Asentus Logo">
+                                <img class="logo-img logo-img-active" src="public/img/mc-logo.png" alt="Asentus Logo">
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -71,7 +71,7 @@
         <!--========== END HEADER ==========-->
 
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/zany-jadraque-571205-unsplash.jpg">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="public/img/zany-jadraque-571205-unsplash.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
@@ -179,7 +179,7 @@
                                             <h3 class="color-white">Descarga mi CV</h3>
                                             <p class="color-white margin-b-5">Da click aquí</p>
                                         </div>
-                                        <a href="vendor/mayra-cruz-cv.pdf" target="_blank" class="content-wrapper-link"></a>    
+                                        <a href="public/vendor/mayra-cruz-cv.pdf" target="_blank" class="content-wrapper-link"></a>    
                                     </div>
                                 </div>
                                 <div class="col-md-4">
@@ -221,7 +221,7 @@
                                 <!-- Work -->
                                 <div class="work work-popup-trigger">
                                     <div class="work-overlay">
-                                        <img class="full-width img-responsive" src="img/venus-01.jpg" alt="Portfolio Image">
+                                        <img class="full-width img-responsive" src="public/img/venus-01.jpg" alt="Portfolio Image">
                                     </div>
                                     <div class="work-popup-overlay">
                                         <div class="work-popup-content">
@@ -262,7 +262,7 @@
                                 <!-- Work -->
                                 <div class="work work-popup-trigger">
                                     <div class="work-overlay">
-                                        <img class="full-width img-responsive" src="img/pokeapi-01.png" alt="Portfolio Image">
+                                        <img class="full-width img-responsive" src="public/img/pokeapi-01.png" alt="Portfolio Image">
                                     </div>
                                     <div class="work-popup-overlay">
                                         <div class="work-popup-content">
@@ -300,7 +300,7 @@
                                 <!-- Work -->
                                 <div class="work work-popup-trigger">
                                     <div class="work-overlay">
-                                        <img class="full-width img-responsive" src="img/phone-ticket-01.jpg" alt="Portfolio Image">
+                                        <img class="full-width img-responsive" src="public/img/phone-ticket-01.jpg" alt="Portfolio Image">
                                     </div>
                                     <div class="work-popup-overlay">
                                         <div class="work-popup-content">
@@ -339,7 +339,7 @@
                                 <!-- Work -->
                                 <div class="work work-popup-trigger">
                                     <div class="work-overlay">
-                                        <img class="full-width img-responsive" src="img/network-01.jpg" alt="Portfolio Image">
+                                        <img class="full-width img-responsive" src="public/img/network-01.jpg" alt="Portfolio Image">
                                     </div>
                                     <div class="work-popup-overlay">
                                         <div class="work-popup-content">
@@ -351,7 +351,7 @@
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Plataforma pensada para los entusiastas de la escritura, dónde pueden publicar historias cortas así como leer o, si lo prefieren guardar como favoritas las historias de otros.</p>
+                                                        <p>Red social para los entusiastas de la escritura. Scribere permite al usuario crear sus propias historias, leer las aportaciones de otros usuarios y guardar como favoritas aquellas historias que más lo impactaron.</p>
                                                         <p>Proyecto colaborativo que utiliza la autentificación por medio de la API de Google: Firebase.</p>
                                                         <ul class="list-inline work-popup-tag">
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Social network,</a></li>
@@ -378,7 +378,7 @@
                                 <!-- Work -->
                                 <div class="work work-popup-trigger">
                                     <div class="work-overlay">
-                                        <img class="full-width img-responsive" src="img/lc-01.png" alt="Portfolio Image">
+                                        <img class="full-width img-responsive" src="public/img/lc-01.png" alt="Portfolio Image">
                                     </div>
                                     <div class="work-popup-overlay">
                                         <div class="work-popup-content">
@@ -478,25 +478,25 @@
 
         <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
         <!-- CORE PLUGINS -->
-        <script src="vendor/jquery.min.js" type="text/javascript"></script>
-        <script src="vendor/jquery-migrate.min.js" type="text/javascript"></script>
-        <script src="vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="public/vendor/jquery.min.js" type="text/javascript"></script>
+        <script src="public/vendor/jquery-migrate.min.js" type="text/javascript"></script>
+        <script src="public/vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
         <!-- PAGE LEVEL PLUGINS -->
-        <script src="vendor/jquery.easing.js" type="text/javascript"></script>
-        <script src="vendor/jquery.back-to-top.js" type="text/javascript"></script>
-        <script src="vendor/jquery.smooth-scroll.js" type="text/javascript"></script>
-        <script src="vendor/jquery.wow.min.js" type="text/javascript"></script>
-        <script src="vendor/jquery.parallax.min.js" type="text/javascript"></script>
-        <script src="vendor/jquery.appear.js" type="text/javascript"></script>
-        <script src="vendor/masonry/jquery.masonry.pkgd.min.js" type="text/javascript"></script>
-        <script src="vendor/masonry/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+        <script src="public/vendor/jquery.easing.js" type="text/javascript"></script>
+        <script src="public/vendor/jquery.back-to-top.js" type="text/javascript"></script>
+        <script src="public/vendor/jquery.smooth-scroll.js" type="text/javascript"></script>
+        <script src="public/vendor/jquery.wow.min.js" type="text/javascript"></script>
+        <script src="public/vendor/jquery.parallax.min.js" type="text/javascript"></script>
+        <script src="public/vendor/jquery.appear.js" type="text/javascript"></script>
+        <script src="public/vendor/masonry/jquery.masonry.pkgd.min.js" type="text/javascript"></script>
+        <script src="public/vendor/masonry/imagesloaded.pkgd.min.js" type="text/javascript"></script>
 
         <!-- PAGE LEVEL SCRIPTS -->
-        <script src="js/layout.min.js" type="text/javascript"></script>
-        <script src="js/components/progress-bar.min.js" type="text/javascript"></script>
-        <script src="js/components/masonry.min.js" type="text/javascript"></script>
-        <script src="js/components/wow.min.js" type="text/javascript"></script>
+        <script src="public/js/layout.min.js" type="text/javascript"></script>
+        <script src="public/js/components/progress-bar.min.js" type="text/javascript"></script>
+        <script src="public/js/components/masonry.min.js" type="text/javascript"></script>
+        <script src="public/js/components/wow.min.js" type="text/javascript"></script>
 
     </body>
     <!-- END BODY -->
