Agregando CV actualizado

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Mayra Cruz</title>
+        <title>Mayra Cruz Frontend Developer</title>
         <link rel="shortcut icon" type="image/x-icon" href="public/img/logo-page.ico">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
@@ -77,12 +77,12 @@
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
                             <h1 class="promo-block-title">Mayra <br/> Cruz</h1>
-                            <p class="promo-block-text">Frontend Developer Jr.</p>
+                            <p class="promo-block-text">Frontend Developer</p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.facebook.com/mayleo.cruz" class="social-icons" target="_blank"><i class="icon-social-facebook"></i></a></li>
                             <li><a href="https://github.com/CruzMayra" class="social-icons" target="_blank"><i class="icon-social-github"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/mayra-cruz-250796159" class="social-icons" target="_blank"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/cruz-mayra" class="social-icons" target="_blank"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
-                            <p>Soy Mayra Cruz, frontend developer junior con conocimientos de Javascript, HTML, Css y Excel. Me considero una persona con sentido de la responsabilidad y adaptación. Me gusta codear, aprender por mi cuenta y encontrar inspiración en el trabajo de otros.</p>
+                            <p>Soy Mayra Cruz, frontend developer con conocimientos de Javascript, HTML5, CSS3 y Excel. Me considero una persona con sentido de la responsabilidad y adaptación. Me gusta codear, aprender por mi cuenta y encontrar inspiración en el trabajo de otros.</p>
                         </div>
 
                         <!-- Progress Box -->
@@ -179,7 +179,7 @@
                                             <h3 class="color-white">Descarga mi CV</h3>
                                             <p class="color-white margin-b-5">Da click aquí</p>
                                         </div>
-                                        <a href="public/vendor/mayra-cruz-cv.pdf" target="_blank" class="content-wrapper-link"></a>    
+                                        <a href="public/vendor/curriculum-mayra-cruz.pdf" target="_blank" class="content-wrapper-link"></a>    
                                     </div>
                                 </div>
                                 <div class="col-md-4">
@@ -274,7 +274,7 @@
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Pokédex clásico que muestra los pokémones de la primer temporada. Además incluye los detalles esenciales de cada uno por medio de un modal.</p>
+                                                        <p>Aplicación que emula la enciclopedia virtual que los entrenadores llevan consigo en la serie, para consultar las fichas de las diversas especies Pokémon.</p>
                                                         <ul class="list-inline work-popup-tag">
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">API,</a></li>
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">GraphQL,</a></li>
@@ -444,7 +444,7 @@
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Linkedin</h5>
-                                    <a href="https://www.linkedin.com/in/mayra-cruz-250796159" class="h3" target="_blank"><i class="icon-social-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/cruz-mayra" class="h3" target="_blank"><i class="icon-social-linkedin"></i></a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Email</h5>
